    2 July 2012

Since build 115 (9 February 2012), the version should have read '6',
not '5'. (This was the date when bracmat wás brought to GitHub.)
Changes in bmalloc that makes it possible to compile with -O3.
Changed 'unsigned char' to 'char' in a lot of places to make some
warnings go away when compiled with gcc.

   22 June 2012

Correction in scompare(). The expression @(1b:~<1 b) did not evaluate 
successfully, which it should. Did a clean-up of this function.

    4 June 2012

Introduced READMARKUPFAMILY macro to turn xml-stuff on (1) or off (0)

    2 June 2012

xml.c supports reading from stdio (no rewind). Example of use:
type pr-xml-utf-8.xml | bracmat "put$(get$(,ML),\"pr-xml-utf-8.bra\",NEW)&"

    1 June 2012

Did some finishing, no essential code changes.

    1 May 2012

Added list of HTML entities. These are decoded to unicode codepoints and
encoded as utf-8 if an option HT is added.

get$("filename.html",HT,ML,TRM)

   29 April 2012

Restructured the (ancient) input function and renamed some identifiers to
English equivalents.
Added a source file, xml.c, that reads SGML, HTML and XML files.
Syntax:

get$(filename,ML)
get$(filename,ML,TRM)
get$(string,MEM,ML)
get$(string,MEM,ML,TRM)

An option HT is made, but does not work yet. Purpose: translate HTML entities.

   13 April 2012

The characters @ and % in front of a string now only turn off escaping with
the \ character inside the string if the string is surrounded by " characters.
Reason: the \L operator was not recognised if its lhs contained a % or @.

    9 February 2012

Corrected error in doPosition that was introduced with the latest
optimizations: the QGETAL bit was checked without also checking the
IS_OPERATOR bit. Found also an instance of QBREUK were this error
might have been made. (The MINUS, QBEUK, QGETAL and QNUL bits are
only valid on leaf nodes.)

     4 February 2012

Discovered that "greater than" relation implemented in the vgl function
wasn't transitive: